# clawdius

./: .clippy.toml  .dockerignore  .env.example  .envrc  .gitignore  BENCHMARKS.md  CHANGELOG.md  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  EDITOR_IMPLEMENTATION.md  FILES_CHANGED.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  JSON_OUTPUT_IMPLEMENTATION.md  JSON_OUTPUT_IMPLEMENTATION_SUMMARY.md  MENTIONS_EXAMPLE.md  MENTIONS_INTEGRATION_COMPLETE.md  Makefile  PATH_FORWARD.md  PHASE10_IMPLEMENTATION.md  PHASE10_VERIFICATION.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  ROADmap.md  STANDARD_CONFLICTS.md  TIMELINE_IMPLEMENTATION.md  TRACEABILITY_MATRIX.md  VERSION.md  WEBVIEW_IMPLEMENTATION.md  WEBVIEW_IMPLEMENTATION_SUMMARY.md  ZAI_INVESTIGATION.md  basic_spec.md  clawdius.example.toml  (+20 more)
crates/clawdius/: Cargo.toml  README.md
crates/clawdius-code/: Cargo.toml  README.md
crates/clawdius-code/src/: main.rs
crates/clawdius-core/: BENCHMARKS.md  Cargo.toml  README.md  test_debug.rs
crates/clawdius-core/benches/: core_bench.rs  hft_bench.rs  llm_benchmark.rs  memory_bench.rs  messaging_bench.rs  performance.rs  phase5_bench.rs  phase5_bench.rs.disabled  session_benchmark.rs  simd_bench.rs  tools_benchmark.rs  wcet_bench.rs
crates/clawdius-core/benches/fixtures/: README.md  generate.sh
crates/clawdius-core/examples/: quick_perf.rs
crates/clawdius-core/src/: capability.rs  checkpoint.rs  commands.rs  config.rs  graph_rag.rs  i18n.rs  lib.rs  llm.rs  modes.rs  output.rs  retry.rs  rpc.rs  sandbox.rs  session.rs  simd.rs  timeout.rs  tools.rs
crates/clawdius-core/src/actions/: docs.rs  mod.rs  refactor.rs  tests.rs  traits.rs
crates/clawdius-core/src/agentic/: apply_workflow.rs  browser_daemon.rs  code_parser.rs  error_recovery.rs  executor_agent.rs  file_ops.rs  generation_mode.rs  incremental.rs  llm_generator.rs  mod.rs  parallel_sprint.rs  planner_agent.rs  review_engine.rs  sandbox.rs  ship_pipeline.rs  sprint.rs  streaming_generator.rs  test_execution.rs  tool_executor.rs  tool_use.rs  verifier_agent.rs  web_search.rs  worktree.rs
crates/clawdius-core/src/agents/: mod.rs
crates/clawdius-core/src/analysis/: debt.rs  drift.rs  mod.rs
crates/clawdius-core/src/api/: agent_loop.rs  auth.rs  auth_handler.rs  gateway.rs  metrics_handler.rs  mod.rs  rate_limit.rs  resource_budget.rs  rest.rs  routes.rs  sprint_handler.rs  tenant.rs  tenant_api.rs  tenant_llm.rs  tenant_pool.rs  vscode.rs
crates/clawdius-core/src/audit/: agent_audit.rs  events.rs  logger.rs  mod.rs
crates/clawdius-core/src/auth/: mod.rs  oidc.rs  saml.rs
crates/clawdius-core/src/brain/: mod.rs  rpc.rs  runtime.rs
crates/clawdius-core/src/broker/: alpaca.rs  arena.rs  execution.rs  feed_manager.rs  feeds.rs  matching.rs  mod.rs  notification.rs  ring_buffer.rs  signal.rs  strategy.rs  wallet_guard.rs
crates/clawdius-core/src/checkpoint/: diff.rs  manager.rs  manager_test.rs  snapshot.rs
crates/clawdius-core/src/commands/: executor.rs  parser.rs  templates.rs
crates/clawdius-core/src/completions/: cache.rs  mod.rs  provider.rs  types.rs
crates/clawdius-core/src/context/: aggregator.rs  builder.rs  cache.rs  compactor.rs  mentions.rs  mod.rs  window_manager.rs
crates/clawdius-core/src/diff/: mod.rs  preview.rs  renderer.rs
crates/clawdius-core/src/enterprise/: audit.rs  compliance.rs  mod.rs  prompt_templates.rs  shared_context.rs  sso.rs  teams.rs
crates/clawdius-core/src/error/: enhanced.rs  mod.rs
crates/clawdius-core/src/graph_rag/: ast.rs  languages.rs  parser.rs  repo_map.rs  search.rs  store.rs  vector.rs
crates/clawdius-core/src/knowledge/: concepts.rs  graph.rs  mod.rs  synthesizer.rs  translator.rs
crates/clawdius-core/src/llm/: cache.rs  messages.rs  model_router.rs  rate_limiter.rs
crates/clawdius-core/src/lsp/: client.rs  mod.rs  protocol.rs
crates/clawdius-core/src/mcp/: handler.rs  mod.rs  protocol.rs  sandboxed_executor.rs
crates/clawdius-core/src/memory/: mod.rs
crates/clawdius-core/src/messaging/: THREAT_MODEL.md  audit.rs  command_parser.rs  config_builder.rs  discord.rs  encrypted_store.rs  gateway.rs  integration.rs  jwt_auth.rs  key_rotation.rs  llm_cache.rs  matrix.rs  mod.rs  oauth.rs  pii_redaction.rs  protocol.rs  rate_limiter.rs  retry_queue.rs  router.rs  secret_resolver.rs  server.rs  session_binder.rs  state_store.rs  telegram.rs  tenant.rs  types.rs  usage_tracker.rs  webhook_receiver.rs
crates/clawdius-core/tests/: api_integration.rs  browser_test.rs  channels_http_tests.rs  checkpoint_integration_test.rs  command_executor_integration.rs  completion_handler_integration.rs  concurrency_model.rs  concurrency_tests.rs  deterministic_tests.rs  error_types_test.rs  hft_pipeline_test.rs  integration_anthropic.rs  json_output_integration.rs  llm_integration.rs  messaging_integration_tests.rs  mode_tests.rs  property_tests.proptest-regressions  property_tests.rs  sandbox_escape.rs  sandbox_integration.rs  test_llm_models.rs  test_vector_harness.rs  timeline_integration.rs
crates/clawdius-mcp/: Cargo.toml  README.md
crates/clawdius-mcp/src/: main.rs
crates/clawdius-server/: Cargo.toml  README.md
crates/clawdius-server/monitoring/: grafana-dashboard.json  prometheus-alerts.yml  slo-definitions.yml
crates/clawdius-server/src/: api_rate_limiter.rs  dap.rs  graphql.rs  main.rs  marketplace.rs  mcp.rs  metrics.rs  otel.rs
crates/clawdius-webview/: Cargo.toml  README.md  build.sh  index.html  styles.css
crates/clawdius-webview/src/: lib.rs
crates/clawdius/benches/: cli_bench.rs
crates/clawdius/examples/: diff_demo.rs
crates/clawdius/src/: cli.rs  cli_progress.rs  main.rs  tool_executor.rs  tui_app.rs
crates/clawdius/tests/: integration_tests.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_diff_engine.rs  fuzz_mention.rs  fuzz_parser.rs  fuzz_rpc.rs
testbed/invoicenest/: CLAWDIUS_TASKS.md  Cargo.toml  README.md
testbed/invoicenest/docs/: ARCHITECTURE.md
testbed/invoicenest/migrations/: 001_initial.sql
(+603 files in other folders)
