[package]
name = "clawdius"
version = "0.1.0"
edition = "2024"
authors = ["Clawdius Team"]
description = "High-Assurance Rust-Native Engineering Engine"
license = "Apache-2.0"
repository = "https://github.com/clawdius/clawdius"
keywords = ["ai", "agent", "hft", "security", "formal-verification"]
categories = ["development-tools", "finance", "security"]

[profile.release]
panic = "abort"        # Disable stack unwinding per HFT SOP
lto = "fat"            # Link-time optimization
codegen-units = 1      # Maximum optimization
strip = true           # Binary size reduction
opt-level = 3          # Maximum performance

[profile.dev]
panic = "abort"

[dependencies]
# === Async Runtime (monoio - io_uring, thread-per-core) ===
# Features: async-cancel, bytes, iouring, legacy, macros, utils (all default)
# Additional: signal (for signal handling), sync (for channels), tracing
monoio = { version = "0.2", features = ["signal", "sync", "tracing"] }

# === CLI ===
clap = { version = "4", features = ["derive"] }
atty = "0.2"

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
rkyv = { version = "0.8", features = ["std"] }

# === Database ===
rusqlite = { version = "0.38", features = ["bundled"] }
# lancedb = "0.26"  # TODO: Re-enable when protoc is available

# === LLM Integration ===
genai = "0.5"
async-openai = "0.33"
reqwest = { version = "0.12", features = ["json", "blocking"] }

# === Code Analysis ===
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
syntect = "5.3"

# === Terminal UI ===
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# === WASM Runtime (Brain Isolation) ===
wasmtime = "42"

# === Security ===
keyring = "3.6"

# === Utilities ===
uuid = { version = "1.21", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha3 = "0.10"
dotenvy = "0.15"

# === High-Performance Allocator ===
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.6"
rstest = "0.25"
criterion = "0.5"
tempfile = "3.17"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["mimalloc"]
hft-mode = []           # Enable HFT-specific optimizations
broker-mode = []        # Enable financial trading features

[workspace]
members = [
    # Future crates will be added here
    # "crates/clawdius-sentinel",
    # "crates/clawdius-graph",
    # "crates/clawdius-brain",
]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "allow"
expect_used = "allow"
panic = "warn"
todo = "warn"

[lints]
workspace = true
