# Clawdius Monorepo Workspace
# 
# This workspace contains all crates for the Clawdius ecosystem:
# - clawdius: CLI tool (standalone)
# - clawdius-code: VSCode extension helper binary
# - clawdius-core: Shared library (LLM, sessions, tools, etc.)
# - clawdius-webview: Leptos-based WASM webview UI

[workspace]
resolver = "2"
members = [
    "crates/clawdius",
    "crates/clawdius-core",
    "crates/clawdius-code",
    "crates/clawdius-mcp",
    "crates/clawdius-server",
    "crates/clawdius-webview",
]

[workspace.package]
version = "1.6.0"
edition = "2021"
authors = ["Clawdius Team <team@clawdius.dev>"]
license = "Apache-2.0"
repository = "https://github.com/clawdius/clawdius"
homepage = "https://clawdius.dev"
documentation = "https://docs.clawdius.dev"
rust-version = "1.88"
keywords = ["ai", "llm", "coding-assistant", "agent", "sandbox"]
categories = ["development-tools", "command-line-utilities", "api-bindings"]
readme = "README.md"

[workspace.dependencies]
# === Async Runtime ===
monoio = { version = "0.2", features = ["signal", "sync", "tracing"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "io-util", "signal"] }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
jsonweb = "0.18"
jsonwebtoken = "9"
rkyv = { version = "0.8", features = ["std"] }

# === CLI ===
clap = { version = "4", features = ["derive", "env"] }

# === Database ===
rusqlite = { version = "0.38", features = ["bundled"] }

# === LLM Integration ===
genai = "0.5"
async-openai = "0.33"
# Fix RUSTSEC-2026-0037 (HIGH - CVSS 8.7) - quinn-proto via reqwest/genai chain
reqwest = { version = "0.12", features = ["json", "stream"] }
# Note: lancedb's object_store vulnerability needs upstream lancedb update

# === Code Analysis ===
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
syntect = "5.3"

# === Terminal UI ===
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# === WASM Runtime (Brain Isolation) ===
wasmtime = "42"

# === JSON-RPC ===
jsonrpsee = { version = "0.24", features = ["server", "client", "ws-client"] }

# === Security ===
keyring = "3.6"
rpassword = "7.3"
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"

# === HTTP ===
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# === Browser Automation ===
# NOTE: default-features = false is required to exclude async-std (RUSTSEC-2025-0052)
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime", "bytes"] }
# headless_chrome removed - chromiumoxide provides equivalent functionality without async-std

# === Leptos (Webview) ===
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7", features = ["csr"] }
leptos-use = "0.15"
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"

# === Utilities ===
uuid = { version = "1.21", features = ["v4", "serde"] }
which = "7.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sha3 = "0.10"
blake3 = "1.5"
dotenvy = "0.15"
walkdir = "2.5"
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
regex = "1.11"
glob = "0.3"
glob-match = "0.2"
ignore = "0.4"
notify = "8.0"
futures = "0.3"
async-trait = "0.1"
pin-project = "1.1"
bytes = "1.9"
tokio-stream = "0.1"
async-stream = "0.3"
# Fix RUSTSEC-2026-0002 (unsound IterMut) - upgrade to 0.16+
lru = "0.16"

# === Token Counting ===
tiktoken-rs = "0.5"

# === Diff ===
similar = "2.6"

# === Git ===
# Fix RUSTSEC-2026-0008 (unsound) - upgrade to 0.20+
git2 = "0.20"

# === Vector Database ===
# Upgraded to 0.27.x to fix RUSTSEC-2026-0044, RUSTSEC-2026-0048, RUSTSEC-2026-0049
lancedb = "0.27"
arrow = "51"
arrow-array = "51"
arrow-schema = "51"

# === ML/Embeddings ===
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"
tokenizers = "0.15"
hf-hub = "0.3"

# === Internationalization ===
fluent = "0.17"
fluent-bundle = "0.16"
unic-langid = "0.9"

# === High-Performance Allocator ===
mimalloc = "0.1"

# === HFT Broker ===
crossbeam-utils = "0.8"
rust_decimal = "1.35"

# === Testing ===
proptest = "1.6"
rstest = "0.25"
criterion = "0.5"
tempfile = "3.17"
mockall = "0.13"
httpmock = "0.7"

# === System Information ===
sysinfo = "0.33"
parking_lot = "0.12"
once_cell = "1.20"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

# Workspace lints — single source of truth is .clippy.toml
# CI passes additional -D flags via CLI (see .github/workflows/ci.yml)
# This configures the baseline; CI is stricter for production checks.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = "warn"

[profile.release]
panic = "abort"
lto = "fat"
strip = "symbols"
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
rpath = false

[profile.dev]
panic = "abort"

[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 4

# PGO instrumented build (step 1 of PGO)
[profile.pgo-instrument]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

# PGO optimized build (step 3 of PGO — uses profiling data)
[profile.pgo-optimized]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# WASM-specific profile
[profile.release.package.clawdius-webview]
opt-level = "z"      # Optimize for size

# rustls-platform-verifier uses a crate type that can't be LTO'd
[profile.release.package.rustls-platform-verifier]
lto = "off"

# No workspace features - each crate defines its own
