[package]
name = "clawdius-mcp"
version.workspace = true
edition.workspace = true
description = "MCP stdio server for Claude Desktop interop"

[dependencies]
clawdius-core = { path = "../clawdius-core", version = "1.6.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
