[package]
name = "clawdius-webview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/clawdius-webview"
description = "WASM webview UI for Clawdius"
readme = "README.md"
keywords = ["ai", "llm", "wasm", "webview", "leptos"]
categories = ["development-tools", "gui", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "MessageEvent",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "Clipboard",
    "Navigator",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["wasmbind"] }
uuid = { version = "1.0", features = ["v4", "js"] }
base64 = "0.21"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
csr = ["leptos/csr"]
